--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.json-simple-1.1.1.jar-1=C:\\Users\\snake\\OneDrive - Dundalk Institute of Technology\\Attachments\\Software Project\\Final Project\\json-simple-1.1.1.jar
-file.reference.mysql-connector-java-8.0.18.jar=C:\\Users\\snake\\OneDrive - Dundalk Institute of Technology\\Attachments\\Software Project\\Final Project\\mysql-connector-java-8.0.18.jar
+file.reference.json-simple-1.1.1.jar=C:\\Users\\USER\\Downloads\\json-simple-1.1.1.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\USER\\Downloads\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,8 +44,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-simple-1.1.1.jar-1}:\
-    ${file.reference.mysql-connector-java-8.0.18.jar}
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
