-utilizing paths in car resource

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,15 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.byte-buddy-1.8.15.jar=C:\\Users\\USER\\Downloads\\selenium-java-3.141.59\\libs\\byte-buddy-1.8.15.jar
+file.reference.client-combined-3.141.59-sources.jar=C:\\Users\\USER\\Downloads\\selenium-java-3.141.59\\client-combined-3.141.59-sources.jar
+file.reference.client-combined-3.141.59.jar=C:\\Users\\USER\\Downloads\\selenium-java-3.141.59\\client-combined-3.141.59.jar
+file.reference.commons-exec-1.3.jar=C:\\Users\\USER\\Downloads\\selenium-java-3.141.59\\libs\\commons-exec-1.3.jar
+file.reference.guava-25.0-jre.jar=C:\\Users\\USER\\Downloads\\selenium-java-3.141.59\\libs\\guava-25.0-jre.jar
 file.reference.json-simple-1.1.1.jar-1=C:\\Users\\USER\\Downloads\\json-simple-1.1.1.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar-1=C:\\Users\\USER\\Downloads\\mysql-connector-java-5.1.23-bin.jar
+file.reference.okhttp-3.11.0.jar=C:\\Users\\USER\\Downloads\\selenium-java-3.141.59\\libs\\okhttp-3.11.0.jar
+file.reference.okio-1.14.0.jar=C:\\Users\\USER\\Downloads\\selenium-java-3.141.59\\libs\\okio-1.14.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,7 +52,14 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.json-simple-1.1.1.jar-1}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}:\
+    ${file.reference.client-combined-3.141.59-sources.jar}:\
+    ${file.reference.client-combined-3.141.59.jar}:\
+    ${file.reference.byte-buddy-1.8.15.jar}:\
+    ${file.reference.commons-exec-1.3.jar}:\
+    ${file.reference.guava-25.0-jre.jar}:\
+    ${file.reference.okhttp-3.11.0.jar}:\
+    ${file.reference.okio-1.14.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
