--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.json-simple-1.1.1.jar=C:\\Users\\Lukas\\Desktop\\College\\json-simple-1.1.1.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\Lukas\\Desktop\\College\\mysql-connector-java-5.1.23-bin.jar
+file.reference.json-simple-1.1.1.jar=C:\\Users\\SeppQ\\Desktop\\College\\json-simple-1.1.1.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\SeppQ\\Desktop\\College\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
