-added fields to car on db, client and server -made password editable in the db config file

--- a/src/java/SqlConnection/DBConfig.properties
+++ b/src/java/SqlConnection/DBConfig.properties
@@ -4,5 +4,5 @@
 
 #database=parkinator
 database=testparkinator
-#password=
-password=This_Is_The_Password
+password=
+#password=This_Is_The_Password
