--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.byte-buddy-1.10.5.jar-1=C:\\Users\\USER\\Downloads\\Parkinator Libraries\\Mockito\\byte-buddy-1.10.5.jar
-file.reference.byte-buddy-agent-1.10.5.jar-1=C:\\Users\\USER\\Downloads\\Parkinator Libraries\\Mockito\\byte-buddy-agent-1.10.5.jar
-file.reference.json-simple-1.1.1.jar-1=C:\\Users\\USER\\Downloads\\Parkinator Libraries\\json-simple-1.1.1.jar
-file.reference.mockito-core-3.2.4.jar-1=C:\\Users\\USER\\Downloads\\Parkinator Libraries\\Mockito\\mockito-core-3.2.4.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar-1=C:\\Users\\USER\\Downloads\\Parkinator Libraries\\mysql-connector-java-5.1.23-bin.jar
-file.reference.objenesis-2.6.jar-1=C:\\Users\\USER\\Downloads\\Parkinator Libraries\\Mockito\\objenesis-2.6.jar
+file.reference.json-simple-1.1.1.jar=C:\\Users\\SeppQ\\Desktop\\College\\json-simple-1.1.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -146,12 +141,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-simple-1.1.1.jar-1}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}:\
-    ${file.reference.byte-buddy-1.10.5.jar-1}:\
-    ${file.reference.byte-buddy-agent-1.10.5.jar-1}:\
-    ${file.reference.mockito-core-3.2.4.jar-1}:\
-    ${file.reference.objenesis-2.6.jar-1}
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
