--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,19 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.json-simple-1.1.1.jar=C:\\Users\\SeppQ\\Desktop\\College\\json-simple-1.1.1.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\SeppQ\\Desktop\\College\\mysql-connector-java-5.1.23-bin.jar
+file.reference.byte-buddy-1.10.5.jar=${var.Libraries}\\byte-buddy-1.10.5.jar
+file.reference.byte-buddy-1.8.15.jar=${var.Libraries}\\byte-buddy-1.8.15.jar
+file.reference.byte-buddy-agent-1.10.5.jar=${var.Libraries}\\byte-buddy-agent-1.10.5.jar
+file.reference.client-combined-3.141.59-sources.jar=${var.Libraries}\\client-combined-3.141.59-sources.jar
+file.reference.client-combined-3.141.59.jar=${var.Libraries}\\client-combined-3.141.59.jar
+file.reference.commons-exec-1.3.jar=${var.Libraries}\\commons-exec-1.3.jar
+file.reference.guava-25.0-jre.jar=${var.Libraries}\\guava-25.0-jre.jar
+file.reference.json-simple-1.1.1.jar-1=${var.Libraries}\\json-simple-1.1.1.jar
+file.reference.mockito-core-3.2.4.jar=${var.Libraries}\\mockito-core-3.2.4.jar
+file.reference.mysql-connector-java-8.0.18.jar=${var.Libraries}\\mysql-connector-java-8.0.18.jar
+file.reference.objenesis-2.6.jar=${var.Libraries}\\objenesis-2.6.jar
+file.reference.okhttp-3.11.0.jar=${var.Libraries}\\okhttp-3.11.0.jar
+file.reference.okio-1.14.0.jar=${var.Libraries}\\okio-1.14.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -143,8 +154,19 @@ jar.compress=false
 javac.classpath=\
     ${libs.junit_4.classpath}:\
     ${libs.hamcrest.classpath}:\
-    ${file.reference.json-simple-1.1.1.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${file.reference.byte-buddy-1.10.5.jar}:\
+    ${file.reference.byte-buddy-1.8.15.jar}:\
+    ${file.reference.byte-buddy-agent-1.10.5.jar}:\
+    ${file.reference.client-combined-3.141.59-sources.jar}:\
+    ${file.reference.client-combined-3.141.59.jar}:\
+    ${file.reference.commons-exec-1.3.jar}:\
+    ${file.reference.guava-25.0-jre.jar}:\
+    ${file.reference.json-simple-1.1.1.jar-1}:\
+    ${file.reference.mockito-core-3.2.4.jar}:\
+    ${file.reference.mysql-connector-java-8.0.18.jar}:\
+    ${file.reference.objenesis-2.6.jar}:\
+    ${file.reference.okhttp-3.11.0.jar}:\
+    ${file.reference.okio-1.14.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
