--- a/test/webdriver/WDConfig.properties
+++ b/test/webdriver/WDConfig.properties
@@ -3,14 +3,14 @@
 #Uncomment your settings
 
 # Michael's Settings
-#testServicesUrl = http://localhost:33986/parkinator/test-resbeans.html
-#driverUrl = C:/Users/USER/Downloads/chromedriver_win32/chromedriver.exe
+testServicesUrl = http://localhost:33986/parkinator/test-resbeans.html
+driverUrl = C:/Users/USER/Downloads/chromedriver_win32/chromedriver.exe
 
 # Lukas' Settings
 #testServicesUrl = 
 #driverUrl = 
 
 # Jonas' Settings
-testServicesUrl = http://localhost:8080/parkinator/test-resbeans.html
-driverUrl = C:/Users/snake/OneDrive - Dundalk Institute of Technology/Attachments/Web Testing/chromedriver.exe
+#testServicesUrl = http://localhost:8080/parkinator/test-resbeans.html
+#driverUrl = C:/Users/snake/OneDrive - Dundalk Institute of Technology/Attachments/Web Testing/chromedriver.exe
 
